# bkanban

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PRODUCT_SPEC.md  TECHNICAL_DESIGN.md
src/bkanban/: __init__.py  aggregate.py  board.py  cli.py  ghostty.py  hapi_client.py  local_state.py  models.py  sessions.py  titles.py
tests/: test_aggregate.py  test_board.py  test_ghostty.py  test_hapi_client.py  test_local_state.py  test_sessions.py  test_titles.py
