[project]
name = "bkanban"
version = "0.1.0"
description = "A local-first Ghostty TUI for HAPi-powered AI sessions"
readme = "README.md"
license = "MIT"
authors = [{ name = "Challen Wang" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "textual>=1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/challenwang408408/bkanban"
Repository = "https://github.com/challenwang408408/bkanban"
Issues = "https://github.com/challenwang408408/bkanban/issues"

[project.scripts]
bkanban = "bkanban.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
